사용자 메인,회원,인덱스
사용자 메인 , 회원 , 인덱스 페이지 커밋

--- a/mbs/src/main/webapp/WEB-INF/mybatis/maria_db.properties
+++ b/mbs/src/main/webapp/WEB-INF/mybatis/maria_db.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=org.mariadb.jdbc.Driver
-jdbc.url=jdbc:mysql://211.110.165.201:3306/mbs?autoReconnect=true&allowMultiQueries=true
+jdbc.url=jdbc:mysql://211.110.165.201:3306/mbs?autoReconnect=true&allowMultiQueries=true&zeroDateTimeBehavior=convertToNull
 jdbc.username=mbs
 jdbc.password=3343
 jdbc.validationQuery=select 1
